# ferric

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: ci.yml
example/: input.toml  input.yaml
lib/: Cargo.toml
lib/src/: basis.rs  elements.rs  geometry.rs  lib.rs  orbitals.rs
lib/src/data/: mod.rs  orbitals.rs
lib/src/geometry/: atom.rs  mod.rs  molecule.rs
lib/src/gto_bases/: def2_tzvp.rs  mod.rs  sto_3g.rs
lib/src/gto_basis_sets/: basis.py  basis.rs  def2_svp.rs  def2_tzvp.rs  mod.rs  sto_3g.rs
lib/src/gto_integrals/: e.rs  eri.rs  h_core.rs  integral_interface.rs  kinetic_energy.rs  mod.rs  nuclear_electron_attraction.rs  nuclear_repulsion.rs  one_electron.rs  overlap.rs  r.rs  two_electron.rs
lib/src/linear_algebra/: blas_level_1.rs  blas_level_2.rs  blas_level_3.rs  constants.rs  diagonalize.rs  functions.rs  linear_solve.rs  matrix.rs  matrix_container.rs  matrix_symmetric.rs  mod.rs  power.rs  scalar.rs  traits.rs  utils.rs  vector.rs
lib/src/math/: blas_level1.rs  blas_level2.rs  blas_level3.rs  blas_level_1.rs  blas_level_2.rs  blas_level_3.rs  dimension.rs  functions.rs  matrix.rs  matrix_container.rs  matrix_new.rs  matrix_symmetric.rs  mod.rs  scalar.rs  traits.rs  utils.rs  vector.rs
lib/src/misc/: elements.rs  mod.rs  system.rs
src/: input.rs  main.rs
src/guess/: driver.rs  hcore.rs  mod.rs
src/main/: input.rs  main.rs
src/scf/: diis.rs  driver.rs  fock.rs  input.rs  main.rs  mod.rs  rhf.rs  run.rs  solver.rs  uhf.rs
src/tools/: basis.rs  elements.rs  geometry.rs  mod.rs
src/tools/gto_bases/: def2_tzvp.rs
src/tools/gto_integrals/: mod.rs  nuclear_attraction.rs  nuclear_repulsion.rs  one.rs  overlap.rs
src/tools/math/: linear_algebra.rs  matrix.rs  matrix_container.rs  mod.rs  trait.rs  vector.rs
