[package]
name = "ferric"
version = "0.1.0"
authors = ["Stan Papadopoulos <stan.papadopoulos@gmail.com>"]
edition = "2018"

[workspace]

[[bin]]
name = "ferric-scf"
path = "src/scf/main.rs"

[dependencies]
ferric-lib =  { path = "lib" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#forward_ref = "1.0.0"
